--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   table_calendar: ^3.0.4
   intl: ^0.17.0
   provider: ^5.0.0
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
