--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   intl: ^0.17.0
   provider: ^5.0.0
   flutter_spinkit: ^5.1.0
+  flutter_form_builder: ^7.1.1
 
 dev_dependencies:
   flutter_test:
