--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   provider: ^5.0.0
   flutter_spinkit: ^5.1.0
   flutter_form_builder: ^7.1.1
+  smart_select: ^4.3.2
+  flutter_awesome_select: ^6.0.1
+  chips_choice_null_safety: ^2.0.6
+  select_form_field: ^2.2.0
 
 dev_dependencies:
   flutter_test:
