--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   chips_choice_null_safety: ^2.0.6
   select_form_field: ^2.2.0
   mysql1: ^0.19.2
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
