--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   select_form_field: ^2.2.0
   mysql1: ^0.19.2
   http: ^0.13.4
+  image_picker: ^0.8.4+11
+  path_provider: ^2.0.9
 
 dev_dependencies:
   flutter_test:
