--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   http: ^0.13.4
   image_picker: ^0.8.4+11
   path_provider: ^2.0.9
+  settings_ui: ^2.0.2
 
 dev_dependencies:
   flutter_test:
