--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   image_picker: ^0.8.4+11
   path_provider: ^2.0.9
   settings_ui: ^2.0.2
+  pausable_timer: ^1.0.0+4
 
 dev_dependencies:
   flutter_test:
