--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   path_provider: ^2.0.9
   settings_ui: ^2.0.2
   pausable_timer: ^1.0.0+4
+  shared_preferences: ^2.0.13
 
 dev_dependencies:
   flutter_test:
