--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   pausable_timer: ^1.0.0+4
   shared_preferences: ^2.0.13
   flutter_settings_screens: ^0.2.2+1
+  simple_timer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
