--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   simple_timer: ^2.0.0
   flutter_speed_dial: ^5.1.0
   flutter_local_notifications: ^9.4.0
+  charts_flutter: ^0.12.0
 
 dev_dependencies:
   flutter_test:
