--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   flutter_speed_dial: ^5.1.0
   flutter_local_notifications: ^9.4.0
   charts_flutter: ^0.12.0
+  heatmap_calendar: ^1.2.8
+  flutter_heatmap_calendar: ^1.0.3
 
 dev_dependencies:
   flutter_test:
