The background service works now

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.ghambeel">
     <uses-permission android:name="android.permission.INTERNET" />
    <application
-        android:label="ghambeel"
+        tools:replace="android:label"
+        android:label="Ghambeel"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
