--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   flutter_speed_dial: ^5.1.0
   flutter_local_notifications: ^9.4.0
   charts_flutter: ^0.12.0
+  background_fetch: ^1.1.0
 
 dev_dependencies:
   flutter_test:
